--- a/benchmarks/.gitignore
+++ b/benchmarks/.gitignore
@@ -1,1 +1,5 @@
 *.sock
+/listen_usock/listen_usock
+/listen_copper/listen_copper
+/readspeed_usock/readspeed_usock
+/readspeed_copper/readspeed_copper
