A saner rpc <-> server interface

--- a/copperd/protocol/Makefile
+++ b/copperd/protocol/Makefile
@@ -1,7 +1,9 @@
-all: install
+.PHONY: all install
 
-install: copperd.pb.go
-	go install
+all: install
 
 copperd.pb.go: copperd.proto
 	protoc --go_out=. $<
+
+install: copperd.pb.go
+	go install
