--- a/protocol/Makefile
+++ b/protocol/Makefile
@@ -2,8 +2,8 @@
 
 all: install
 
-copper.pb.go: copper.proto
-	protoc --go_out=. $<
+copper.pb.go: ../copper.proto
+	protoc --proto_path .. --go_out=. $<
 
 install: copper.pb.go
 	go install
