Move copper.proto back to protocol, build python bindings

--- a/protocol/Makefile
+++ b/protocol/Makefile
@@ -2,8 +2,11 @@
 
 all: install
 
-copper.pb.go: ../copper.proto
-	protoc --proto_path .. --go_out=. $<
+copper.pb.go: copper.proto
+	protoc --go_out=. $<
 
-install: copper.pb.go
+copper_pb2.py: copper.proto
+	protoc --python_out=. $<
+
+install: copper.pb.go copper_pb2.py
 	go install
