--- a/contrib/python-copper/debian/control
+++ b/contrib/python-copper/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 7),
                python-setuptools (>= 0.6b3),
                python-protobuf,
                python-gevent,
+               protobuf-compiler,
 Standards-Version: 3.9.3
 
 Package: python-copper
